[tool.poetry]
name = "truth-or-dare-bot"
version = "0.1.0"
description = ""
authors = ["Alexander <ezhkovskii@gmail.com>"]
readme = "README.md"
packages = [{include = "truth_or_dare_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2022.7.1"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
ipython = "^8.8.0"
django = "^4.1.5"
django-cors-headers = "^3.13.0"
django-debug-toolbar = "^3.8.1"
whitenoise = "^6.3.0"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
psycopg2-binary = "^2.9.5"
dj-database-url = "^1.2.0"
celery = "^5.2.7"
redis = "^4.4.2"
django-celery-beat = "^2.4.0"
python-telegram-bot = "13.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
